fixed top bar not visible on share page

--- a/components/common/asset/top-bar.module.css
+++ b/components/common/asset/top-bar.module.css
@@ -1,10 +1,10 @@
-.container {
-  /*position: relative;*/
+.container { 
+  /* position: relative; */
   position: fixed;
   width: 100%;
-  top: 81px;
+  top: 85px;
   left: 0;
-  z-index: 1399; /* To be lower than top bar so that upoad popup is not hidden*/
+  z-index: 2000; /* To be lower than top bar so that upoad popup is not hidden */
   background-color: white;
   padding: 24px 32px;
   min-height: 110px;
